crates/snapshot-tests/tests/snapshots/parser__datetimes__bad_minute.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[InvalidDateTime]: invalid datetime: minute is out of range at `a`
  ┌─ bad_minute:1:5
  │
1 │ a = 2016-09-09T09:60:00
  │     ^^^^^^^^^^^^^^^^^^^ invalid datetime: minute is out of range


error: invalid datetime: minute is out of range at `a`
 --> bad_minute:1:5
  |
1 | a = 2016-09-09T09:60:00
  |     ^^^^^^^^^^^^^^^^^^^ invalid datetime: minute is out of range
Error {
    kind: "InvalidDateTime",
    message: "invalid datetime: minute is out of range",
    span: 4..23,
    path: Some(
        "a",
    ),
}
